refactor: 멘토링 상세조회 별점 평균, 개수 DB 직접 조회 #476