@@ -22,8 +22,8 @@ import fittoring.mentoring.business.repository.ImageRepository;
 import fittoring.mentoring.business.repository.MemberRepository;
 import fittoring.mentoring.business.repository.MentoringRepository;
 import fittoring.mentoring.business.service.JwtProvider;
-import fittoring.mentoring.presentation.dto.MentoringRequest;
 import fittoring.mentoring.presentation.dto.CertificateSpecAndImageResponse;
+import fittoring.mentoring.presentation.dto.MentoringRequest;
 import fittoring.mentoring.presentation.dto.MentoringResponse;
 import fittoring.mentoring.presentation.dto.MentoringSummaryResponse;
 import fittoring.util.DbCleaner;
@@ -728,37 +728,37 @@ class MentoringControllerTest {
     void modifyMentoring() throws IOException {
         //given
         Member mentor = memberRepository.save(new Member(
-            "id1",
-            "MALE",
-            "김트레이너",
-            new Phone("010-1234-9048"),
-            Password.from("pw")
+                "id1",
+                "MALE",
+                "김트레이너",
+                new Phone("010-1234-9048"),
+                Password.from("pw")
         ));
 
         Category category1 = categoryRepository.save(new Category("category1"));
         categoryRepository.save(new Category("category2"));
         Mentoring mentoring = mentoringRepository.save(new Mentoring(
-            mentor,
-            5000,
-            3,
-            "한 줄 소개",
-            "긴 글 소개"
+                mentor,
+                5000,
+                3,
+                "한 줄 소개",
+                "긴 글 소개"
         ));
         imageRepository.save(new Image(
-            "originalProfileImage",
-            ImageType.MENTORING_PROFILE,
-            mentoring.getId()
+                "originalProfileImage",
+                ImageType.MENTORING_PROFILE,
+                mentoring.getId()
         ));
         categoryMentoringRepository.save(new CategoryMentoring(category1, mentoring));
         Certificate certificate = certificateRepository.save(new Certificate(
-            CertificateType.LICENSE,
-            "운전면허증",
-            mentoring
+                CertificateType.LICENSE,
+                "운전면허증",
+                mentoring
         ));
         imageRepository.save(new Image(
-            "originalCertificateImage",
-            ImageType.CERTIFICATE,
-            certificate.getId()
+                "originalCertificateImage",
+                ImageType.CERTIFICATE,
+                certificate.getId()
         ));
 
         int newPrice = 1000;
@@ -767,27 +767,27 @@ class MentoringControllerTest {
         int newCareer = 5;
         String newContent = "수정된 한 줄 소개";
         MentoringRequest requestBody = new MentoringRequest(
-            newPrice,
-            List.of(newCategory),
-            newIntroduction,
-            newCareer,
-            newContent,
-            Collections.emptyList()
+                newPrice,
+                List.of(newCategory),
+                newIntroduction,
+                newCareer,
+                newContent,
+                Collections.emptyList()
         );
         String accessToken = jwtProvider.createAccessToken(mentor.getId());
 
         // when
         // then
         RestAssured
-            .given()
-            .log().all().contentType(ContentType.JSON)
-            .cookie("accessToken", accessToken)
-            .contentType(ContentType.MULTIPART)
-            .multiPart("data", objectMapper.writeValueAsString(requestBody), "application/json")
-            .when()
-            .put("/mentorings/" + mentoring.getId())
-            .then().log().all()
-            .statusCode(200);
+                .given()
+                .log().all().contentType(ContentType.JSON)
+                .cookie("accessToken", accessToken)
+                .contentType(ContentType.MULTIPART)
+                .multiPart("data", objectMapper.writeValueAsString(requestBody), "application/json")
+                .when()
+                .put("/mentorings/" + mentoring.getId())
+                .then().log().all()
+                .statusCode(200);
     }
 
     @DisplayName("존재하지 않는 멘토링을 수정하려고 하면 404 Not Found를 반환한다")
@@ -795,11 +795,11 @@ class MentoringControllerTest {
     void modifyMentoringFail1() throws IOException {
         // given
         Member mentor = memberRepository.save(new Member(
-            "id1",
-            "MALE",
-            "김트레이너",
-            new Phone("010-1234-9048"),
-            Password.from("pw")
+                "id1",
+                "MALE",
+                "김트레이너",
+                new Phone("010-1234-9048"),
+                Password.from("pw")
         ));
 
         int newPrice = 1000;
@@ -808,27 +808,27 @@ class MentoringControllerTest {
         int newCareer = 5;
         String newContent = "수정된 한 줄 소개";
         MentoringRequest requestBody = new MentoringRequest(
-            newPrice,
-            List.of(newCategory),
-            newIntroduction,
-            newCareer,
-            newContent,
-            Collections.emptyList()
+                newPrice,
+                List.of(newCategory),
+                newIntroduction,
+                newCareer,
+                newContent,
+                Collections.emptyList()
         );
         String accessToken = jwtProvider.createAccessToken(mentor.getId());
 
         // when
         // then
         RestAssured
-            .given()
-            .log().all().contentType(ContentType.JSON)
-            .cookie("accessToken", accessToken)
-            .contentType(ContentType.MULTIPART)
-            .multiPart("data", objectMapper.writeValueAsString(requestBody), "application/json")
-            .when()
-            .put("/mentorings/999")
-            .then().log().all()
-            .statusCode(404);
+                .given()
+                .log().all().contentType(ContentType.JSON)
+                .cookie("accessToken", accessToken)
+                .contentType(ContentType.MULTIPART)
+                .multiPart("data", objectMapper.writeValueAsString(requestBody), "application/json")
+                .when()
+                .put("/mentorings/999")
+                .then().log().all()
+                .statusCode(404);
     }
 
     @DisplayName("본인이 개설하지 않은 멘토링을 수정하려고 하면 403 Forbidden를 반환한다")
@@ -836,26 +836,26 @@ class MentoringControllerTest {
     void modifyMentoringFail2() throws IOException {
         // given
         Member mentor = memberRepository.save(new Member(
-            "id1",
-            "MALE",
-            "김트레이너",
-            new Phone("010-1234-9048"),
-            Password.from("pw")
+                "id1",
+                "MALE",
+                "김트레이너",
+                new Phone("010-1234-9048"),
+                Password.from("pw")
         ));
         Mentoring mentoring = mentoringRepository.save(new Mentoring(
-            mentor,
-            5000,
-            3,
-            "한 줄 소개",
-            "긴 글 소개"
+                mentor,
+                5000,
+                3,
+                "한 줄 소개",
+                "긴 글 소개"
         ));
 
         Member invalidMember = memberRepository.save(new Member(
-            "id2",
-            "MALE",
-            "박트레이너",
-            new Phone("010-1234-9021"),
-            Password.from("pw")
+                "id2",
+                "MALE",
+                "박트레이너",
+                new Phone("010-1234-9021"),
+                Password.from("pw")
         ));
 
         int newPrice = 1000;
@@ -864,27 +864,27 @@ class MentoringControllerTest {
         int newCareer = 5;
         String newContent = "수정된 한 줄 소개";
         MentoringRequest requestBody = new MentoringRequest(
-            newPrice,
-            List.of(newCategory),
-            newIntroduction,
-            newCareer,
-            newContent,
-            Collections.emptyList()
+                newPrice,
+                List.of(newCategory),
+                newIntroduction,
+                newCareer,
+                newContent,
+                Collections.emptyList()
         );
         String accessToken = jwtProvider.createAccessToken(invalidMember.getId());
 
         // when
         // then
         RestAssured
-            .given()
-            .log().all().contentType(ContentType.JSON)
-            .cookie("accessToken", accessToken)
-            .contentType(ContentType.MULTIPART)
-            .multiPart("data", objectMapper.writeValueAsString(requestBody), "application/json")
-            .when()
-            .put("/mentorings/" + mentoring.getId())
-            .then().log().all()
-            .statusCode(403);
+                .given()
+                .log().all().contentType(ContentType.JSON)
+                .cookie("accessToken", accessToken)
+                .contentType(ContentType.MULTIPART)
+                .multiPart("data", objectMapper.writeValueAsString(requestBody), "application/json")
+                .when()
+                .put("/mentorings/" + mentoring.getId())
+                .then().log().all()
+                .statusCode(403);
     }
 }
 
